# Obscura

./: .gitignore  CMakeLists.txt  README.md
demos/: CMakeLists.txt  demo_diversity.cpp  demo_heatmap.cpp  demo_menu_ecology.cpp  demo_rules_playground.cpp
include/obscura/ecology/: Agent.hpp  CellSettle.h  CellSettle.hpp  Claim.hpp  Instrumentation.h  Instrumentation.hpp  LocalView.h  LocalView.hpp  Population.hpp  Scheduler.h  Scheduler.hpp  World.h  World.hpp
include/obscura/organisms/: BlinkAgent.hpp  Box.h  Box.hpp  Menu.h  Menu.hpp  NoiseAgent.hpp  Statusline.h  Statusline.hpp  TrailAgent.hpp
include/obscura/term/: Input.h  Input.hpp  Renderer.h  Renderer.hpp  Screen.h  Screen.hpp  Terminal.h  Terminal.hpp
scripts/: run_in_terminal.sh
src/ecology/: CellSettle.cpp  Instrumentation.cpp  Population.cpp  Scheduler.cpp  World.cpp
src/organisms/: BlinkAgent.cpp  Box.cpp  Menu.cpp  NoiseAgent.cpp  Statusline.cpp  TrailAgent.cpp
src/term/: Input.cpp  Renderer.cpp  Screen.cpp  Terminal.cpp
tests/: CMakeLists.txt  test_diff_renderer.cpp  test_input_decode.cpp  test_local_view.cpp  test_main.cpp  test_population.cpp  test_scheduler.cpp  test_settle_rules.cpp  test_support.hpp  test_world_contention.cpp
